feat: wire up handlebars a bit

--- a/templates/strapless.sh.hbs
+++ b/templates/strapless.sh.hbs
@@ -46,10 +46,10 @@ STDIN_FILE_DESCRIPTOR="0"
 
 # Set by pages/api/strapless.sh.ts using handlebars
 # TODO: allow for gitlab or bitbucket credentials
-STRAPLESS_GIT_NAME={{github_name}}
-STRAPLESS_GIT_EMAIL={{github_email}}
-STRAPLESS_GITHUB_USER={{github_username}}
-STRAPLESS_GITHUB_TOKEN={{github_token}}
+STRAPLESS_GIT_NAME={{githubName}}
+STRAPLESS_GIT_EMAIL={{githubEmail}}
+STRAPLESS_GITHUB_USER={{githubUsername}}
+STRAPLESS_GITHUB_TOKEN={{githubToken}}
 STRAPLESS_ISSUES_URL='https://github.com/DavidJFelix/strapless/issues/new'
 
 # We want to always prompt for sudo password at least once rather than doing
